examples/type_system/failing/163_match_concrete_disagreement_prefers_e300.flx
fn main() -> Unit {
    let x: Int = match true {
        true -> 1,
        false -> "oops",
    }
}
